Fri Nov 15 17:07:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#send): override to get rid of global function interference.
	  [Fixes GH-449]

Fri Nov 15 01:06:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/objspace/objspace_dump.c (dump_output): allow IO object as
	  output, and use Tempfile.create and return open file instead of
	  mkstemp() and path name for :file output.
	  [ruby-core:58266] [Bug #9102]

	* test/objspace/test_objspace.rb (TestObjSpace#dump_my_heap_please):
	  remove temporary output file.

Thu Nov 14 23:39:00 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/util.rb: [DOC] remove example of
	  Rational#to_d without argument. [Bug #8958]

Thu Nov 14 20:24:15 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* ruby_atomic.h (ATOMIC_SIZE_CAS): fix compile error on Solaris
	  since r43460.

Thu Nov 14 19:53:00 2013  Tanaka Akira  <akr@fsij.org>

	* test/openssl/test_cipher.rb (test_aes_gcm_wrong_tag): Don't use
	  String#succ because it can make modified (wrong) auth_tag longer
	  than 16 bytes.  The longer auth_tag makes that
	  EVP_CIPHER_CTX_ctrl (and internally aes_gcm_ctrl) fail.
	  [ruby-core:55143] [Bug #8439] reported by Vit Ondruch.

Thu Nov 14 11:35:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (hash_foreach_ensure): restore iter_lev to the previous
	  value, not just decrement.  [ruby-dev:47803] [Bug #9105]

	* hash.c (foreach_safe_i, hash_foreach_iter): deal with error detected
	  by ST_CHECK.

	* st.c (st_foreach_check): call with non-error argument in normal case.

Thu Nov 14 02:37:14 2013  Zachary Scott  <e@zzak.io>

	* ext/thread/thread.c: [DOC] This patch accomplishes the following:

	  - Teach RDoc about ConditionVariable
	  - Teach RDoc about Queue
	  - Teach RDoc about SizedQueue
	  - Use fully-qualified namespace for Document-method
	    This is necessary to separate definitions between classes
	  - Fix rdoc bug in call_seq vs. call-seq