@@ -930,7 +930,9 @@ class TestHash < Test::Unit::TestCase
       h.clear
       c.call
     end
+  end
 
+  def test_callcc_iter_level
     bug9105 = '[ruby-dev:47803] [Bug #9105]'
     h = @cls[1=>2, 3=>4]
     c = nil
@@ -946,6 +948,22 @@ class TestHash < Test::Unit::TestCase
         assert_not_equal(false, i, bug9105)
       }
     end
+  end
+
+  def test_threaded_iter_level
+    bug9105 = '[ruby-dev:47807] [Bug #9105]'
+    h = @cls[1=>2]
+    2.times.map {
+      f = false
+      th = Thread.start {h.each {f = true; sleep}}
+      Thread.pass until f
+      Thread.pass until th.stop?
+      th
+    }.each {|th| th.run; th.join}
+    assert_nothing_raised(RuntimeError, bug9105) do
+      h[5] = 6
+    end
+    assert_equal(6, h[5], bug9105)
   end
 
   def test_compare_by_identity
